<resources>
    <string name="app_name">Movies</string>
    <string name="back_main_poster">Back</string>
    <string name="age_limit">13+</string>
    <string name="movie_name">Avengers: \nEnd Game</string>
    <string name="Movie_genre">Action, Adventure, Fantasy</string>
    <string name="review_count">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="movie_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert \nDowney Jr.</string>
    <string name="chris_evans">Chris \nEvans</string>
    <string name="mark_ruffalo">Mark \nRuffalo</string>
    <string name="chris_hemsworth">Chris \nHemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="movie_list_movie_name">Avengers: End Game</string>
    <string name="movie_length">137 MIN</string>
</resources>