<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_poster"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/main_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mask_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="46dp"
            android:fontFamily="sans-serif"
            android:text="@string/back_main_poster"
            android:textAlignment="center"
            android:textColor="#6D6D80"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/age_limit"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textFontWeight="900"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="254dp"
            android:fontFamily="sans-serif"
            android:text="@string/movie_name"
            android:textColor="#ECECEC"
            android:textFontWeight="900"
            android:textSize="40sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/Movie_genre"
            android:textColor="#FF3466"
            android:textFontWeight="300"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@id/star_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/star_1"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/star_2"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/star_3"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/star_4"
            app:layout_constraintTop_toBottomOf="@id/tv_genre"
            app:tint="#6D6D80" />

        <TextView
            android:id="@+id/review_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/review_count"
            android:textColor="#6D6D80"
            android:textFontWeight="900"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/star_5"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/storyline"
            android:textColor="#ECECEC"
            android:textFontWeight="900"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_count" />

        <TextView
            android:id="@+id/moviedescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/movie_description"
            android:textColor="#FFFFFF"
            android:textFontWeight="300"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/cast"
            android:textColor="#ECECEC"
            android:textFontWeight="900"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/moviedescription" />

        <ImageView
            android:id="@+id/robert_downey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/robert_downie"
            app:layout_constraintEnd_toStartOf="@id/chris_evans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:id="@+id/tv_robert_downey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif"
            android:text="@string/robert_downey_jr"
            android:textColor="#D8D8D8"
            android:textFontWeight="900"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/robert_downey"
            app:layout_constraintTop_toBottomOf="@id/robert_downey" />

        <ImageView
            android:id="@+id/chris_evans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/chris_evans"
            app:layout_constraintEnd_toStartOf="@id/mark_rufalo"
            app:layout_constraintStart_toEndOf="@id/robert_downey"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif"
            android:text="@string/chris_evans"
            android:textColor="#D8D8D8"
            android:textFontWeight="900"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/chris_evans"
            app:layout_constraintTop_toBottomOf="@id/chris_evans" />

        <ImageView
            android:id="@+id/mark_rufalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/mark_rufalo"
            app:layout_constraintEnd_toStartOf="@id/chris_hemsworth"
            app:layout_constraintStart_toEndOf="@id/chris_evans"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif"
            android:text="@string/mark_ruffalo"
            android:textColor="#D8D8D8"
            android:textFontWeight="900"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/mark_rufalo"
            app:layout_constraintTop_toBottomOf="@id/mark_rufalo" />

        <ImageView
            android:id="@+id/chris_hemsworth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/chris_hemsvort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mark_rufalo"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif"
            android:text="@string/chris_hemsworth"
            android:textColor="#D8D8D8"
            android:textFontWeight="900"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/chris_hemsworth"
            app:layout_constraintTop_toBottomOf="@id/robert_downey" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>